--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "express": "3.1.x",
     "mongodb" : "1.1.11",
-    "mongojs" : "x"
+    "mongojs" : "*",
+    "jade": "*"
   },
   "engines": {
     "node": "0.10.x",
