--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-expose": "*",
     "htmlparser2": "*",
     "soupselect": "*",
-    "async":"*"
+    "async":"*",
+    "newrelic":"*"
   },
   "engines": {
     "node": "0.10.x",
