formatting; player search dropdown

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment":"*",
     "socket.io":"*",
     "express-csv":"*",
-    "nodeunit":"*"
+    "nodeunit":"*",
+    "numeral":"*"
   },
   "engines": {
     "node": "0.10.x",
