better session hopefully

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "socket.io":"*",
     "express-csv":"*",
     "nodeunit":"*",
-    "numeral":"*"
+    "numeral":"*",
+    "connect-mongo":"*"
   },
   "engines": {
     "node": "0.10.x",
